# chess-cpp

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  chess_turn.cpp  chess_turn.h  main.cpp  move_parser.cpp  move_parser.h  pieces.cpp  pieces.h
